# Master_Slave_Firmware

./: README.md
CAN_ESP32/: README.md
CAN_ESP32/CAN_ESP32/master/: .gitignore  CMakeLists.txt  sdkconfig
CAN_ESP32/CAN_ESP32/master/main/: CMakeLists.txt  main.c
firmware_updater/: README.md
firmware_updater/canopennode/: CO_driver.c  CO_driver_target.h  OD.c
firmware_updater/complete_demo/: README.md
firmware_updater/complete_demo/master/: fw_master_update.c  fw_master_update.h
firmware_updater/complete_demo/master/demomaster/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware_updater/complete_demo/master/demomaster/main/: CMakeLists.txt  Kconfig.projbuild  master_main.c
firmware_updater/complete_demo/raspberry_master/: Makefile  README.md  fw_master_update.c  fw_master_update.h  main_rpi_master.c  rpi_can.c  rpi_can.h  sdo_client.c  sdo_client.h
firmware_updater/complete_demo/resumed_demo_and_stuff/: master_firmware_uploader.c  raspberry_master_firmware_uploader.c
firmware_updater/complete_demo/slave/: slave_main.c
firmware_updater/complete_demo/slave/demoslave/main/: CMakeLists.txt  Kconfig.projbuild
firmware_updater/old/demo/: dummy_slave_main.c
slave_init_bo/: build_slave_bins.py
slave_init_bo/slave/: sdkconfig
slave_init_bo/slave/build-version1/: .bin_timestamp  .ninja_deps  .ninja_log
slave_init_bo/slave/build-version2/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  project_description.json  slave.map
slave_init_bo/slave/main/: cositas.txt  main.c
(+208 files in other folders)
